{
    "name": "MouseActions",
    "maps": [
        {
            "name": "All",
            "id": "c300bc73-4668-49d3-91c2-aedaffaa4784",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "a3d04975-5c73-4b4c-a6ca-95bd970b9354",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "360009cd-f1d6-4a66-b1a7-faa27247a94d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MiddleClick",
                    "type": "Button",
                    "id": "075f7738-b300-4335-99df-3a02594ec32e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftMouse",
                    "type": "Button",
                    "id": "6e55d6eb-e88f-41cb-914f-6577ad843f54",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightMouse",
                    "type": "Button",
                    "id": "489b67ca-1431-4540-bad4-826db9efc61f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MiddleMouse",
                    "type": "Button",
                    "id": "2a01e055-7e9b-489a-9077-2e4c31f5b215",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b17660e8-0230-4b96-8f64-be401d059b17",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87961dac-ff92-4899-8d84-c01efaf5ad21",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba87b9f4-d9a7-4f4f-82b6-70b9c283b44c",
                    "path": "<Mouse>/middleButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "MiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d816cfc-cb8b-405e-b24d-492c94073b37",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "LeftMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4deb0c1d-68f7-42e4-b898-df7e3f4b9c1f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "RightMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29db7115-caa8-41e7-89eb-b81043cf97fa",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "MiddleMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}